# synthhub

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: run_benchmark.py
benchmarks/results/: latest.csv  latest.md
docs/: design.md  dp-guarantees.md  private-pgm.md  public-schema.md  release.md
docs/launch/: README.md  github-release-v0.1.0.post1.md  social-posts.md
docs/releases/: v0.1.0.md
examples/: compare_backends.ipynb  public_schema.py  quickstart.ipynb
synthhub/: __init__.py  errors.py  preprocessing.py  reports.py  schema.py  synth.py  validation.py
synthhub/backends/: __init__.py  base.py  datasynthesizer.py  independent.py  private_pgm.py  registry.py  smartnoise.py  synthcity.py
synthhub/evaluation/: __init__.py  privacy.py  utility.py
tests/: test_backend_contract.py  test_evaluation.py  test_optional_backends.py  test_schema.py  test_synthesizer.py  test_use_cases.py
